--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "lodash": "^4.17.21",
+    "dotenv": "^16.0.1",
     "lodash.debounce": "^4.0.8",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
